--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/hearthstone_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -16,6 +16,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".SecondeActivity" />
+        <activity android:name=".RandomActivity" />
+        <activity android:name=".AlphaActivity" />
+
 
         <service
             android:name=".GetBieresServices"
